[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
arrayvec = "0.7.4"
bstr = "1.8.0"
bumpalo = "3.14.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.13.0"
nom = "7.1.3"
num = "0.4.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
ring-algorithm = "0.7.0"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "days"
harness = false

[profile.bench]
debug = true
