[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
arrayvec = "0.7.6"
bstr = "1.11.0"
bumpalo = "3.16.0"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.13.0"
nom = "7.1.3"
num = "0.4.3"
reqwest = { version = "0.12.9", features = ["blocking"] }
ring-algorithm = "0.7.0"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "days"
harness = false

[profile.bench]
debug = true
